syntax = "proto3";

package types;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// DeviceV1 is the resource representation of teleport.devicetrust.v1.Device.
message DeviceV1 {
  // Kind of the resource.
  // Always "device".
  string Kind = 1 [(gogoproto.jsontag) = "kind"];
  // SubKind of the resource.
  // Unused for devices.
  string SubKind = 2 [(gogoproto.jsontag) = "sub_kind,omitempty"];
  // Version of the resource.
  // Equivalent to teleport.devicetrust.v1.Device.api_version.
  // Currently only "v1" is supported.
  string version = 3 [(gogoproto.jsontag) = "version"];
  // Metadata of the resource.
  // The Metadata.Name is equivalent to teleport.devicetrust.v1.Device.id.
  Metadata metadata = 4 [(gogoproto.jsontag) = "metadata"];
  // Specification of the device.
  DeviceSpec spec = 5 [(gogoproto.jsontag) = "spec"];
}

// DeviceSpec is a device specification.
// Roughly matches teleport.devicetrust.v1.Device, with some fields changed for
// better UX.
message DeviceSpec {
  string os_type = 1 [(gogoproto.jsontag) = "os_type"];
  string asset_tag = 2 [(gogoproto.jsontag) = "asset_tag"];
  google.protobuf.Timestamp create_time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "create_time"
  ];
  google.protobuf.Timestamp update_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "update_time"
  ];
  string enroll_status = 5 [(gogoproto.jsontag) = "enroll_status"];
  DeviceCredential credential = 6 [(gogoproto.jsontag) = "credential,omitempty"];
  repeated DeviceCollectedData collected_data = 7 [(gogoproto.jsontag) = "collected_data,omitempty"];
}

// DeviceCredential is the resource representation of
// teleport.devicetrust.v1.DeviceCredential.
message DeviceCredential {
  string id = 1 [(gogoproto.jsontag) = "id"];
  bytes public_key_der = 2 [(gogoproto.jsontag) = "public_key_der"];
}

// DeviceCollectedData is the resource representation of
// teleport.devicetrust.v1.DeviceCollectedData.
message DeviceCollectedData {
  google.protobuf.Timestamp collect_time = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "collect_time"
  ];
  google.protobuf.Timestamp record_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "record_time"
  ];
  string os_type = 3 [(gogoproto.jsontag) = "os_type"];
  string serial_number = 4 [(gogoproto.jsontag) = "serial_number,omitempty"];
}
